--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
-;(ocamllex lexer)
-;(menhir
-;  (flags --explain)
-;  (modules parser))
+(ocamllex lexer)
+(menhir
+  (flags --explain)
+  (modules parser))
 
 (executable
  (name commutable)
